--- a/02/index.html
+++ b/02/index.html
@@ -72,9 +72,9 @@
                 } else if (e.key == 'b') {
                     cameraRotate = !cameraRotate;
                 } else if (e.key == 'o') {
-                    download(r);
+                    download();
                 } else if (e.key == 'l') {
-                    upload(r, "scene.json");
+                    upload("scene.json");
                 }
             };
 
