Made starter files

--- a/02/index.html
+++ b/02/index.html
@@ -1,2 +1,22 @@
-Ready for assignment 2.
+Started Assignment 2, under progress...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"> 
+    <title>Assignment 2 (Cs 460 with Daniel)</title>
+    <script type="text/javascript" src="http://get.goxtk.com/xtk_edge.js"></script>
+</head>
+<body>
+    <script>
+        window.onload = function(){
+            
+        }
+    </script>
 
+
+
+
+
+
+</body>
+</html>
