--- a/Funsies/cube.html
+++ b/Funsies/cube.html
@@ -78,6 +78,17 @@
                 }
 
                 r.render(); 
+                
+                /*
+                r.interactor.onMouseMove = function(event) { 
+                                      
+                    let cubeid =  r.pick(event.offsetX, event.offsetY) ;
+
+                    if (cubeid != 0) {                        
+                        r.get(cubeid).transform.translateX(10);
+                    };
+                };
+                */
             };
         </script>
     </body>
