--- a/02/index.html
+++ b/02/index.html
@@ -19,6 +19,7 @@
 
         <!-- Gets the XTK library -->
         <script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
+        <script type="loader" src="../02/loader.js"></script>
 
     </head>
 
