--- a/02/index.html
+++ b/02/index.html
@@ -115,10 +115,10 @@
                         ROTATING_TIME = !ROTATING_TIME;
                     };
                     if (e.key == 'o') {
-                        loader.download();
+                        download();
                     };
                     if (e.key == 'l') {
-                        loader.upload(scene.json);
+                        upload(scene.json);
                     };
                 };
             };    
