--- a/02/index.html
+++ b/02/index.html
@@ -19,7 +19,7 @@
 
         <!-- Gets the XTK library -->
         <script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
-        <script type="loader" src="../02/loader.js"></script>
+        <script type="text/javascript" src="./loader.js"></script>
 
     </head>
 
@@ -118,7 +118,7 @@
                         download();
                     };
                     if (e.key == 'l') {
-                        upload(scene.json);
+                        upload("scene.json");
                     };
                 };
             };    
