--- a/02/index.html
+++ b/02/index.html
@@ -115,7 +115,7 @@
                         ROTATING_TIME = !ROTATING_TIME;
                     };
                     if (e.key == 'o') {
-                        download();
+                        download(r);
                     };
                     if (e.key == 'l') {
                         upload("scene.json");
