--- a/02/index.html
+++ b/02/index.html
@@ -2,36 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>CS460 — Assignment 2 (Part 1)</title>
+    <title>CS460 — Assignment 2 (Part 2)</title>
     <style>
       html, body, #r { margin: 0; width: 100%; height: 100%; background: #000; }
     </style>
   </head>
   <body>
-    <!-- XTK renders into this div -->
     <div id="r"></div>
 
-    <!-- XTK library (use your class’s URL if they gave one) -->
+    <!-- XTK library -->
     <script src="https://get.goxtk.com/xtk.js"></script>
 
+    <!-- loader.js for save/load (used later) -->
+    <script src="loader.js"></script>
+
     <script>
-      // Part 1: renderer + a single cube
+      var r = null;
+      var CAMERAS = [];
+
       window.onload = function () {
-        var r = new X.renderer3D();
+        r = new X.renderer3D();
         r.container = 'r';
         r.init();
 
-        var cube = new X.cube();
-        cube.lengthX = 20;
-        cube.lengthY = 20;
-        cube.lengthZ = 20;
-        cube.color = [0.8, 0.2, 0.2]; // red-ish
+        // 11 × 11 × 11 grid = 1331 cubes
+        const SIZE = 6;
+        const GAP  = 2;
 
-        r.add(cube);
+        for (let z = -5; z <= 5; z++) {
+          for (let y = -5; y <= 5; y++) {
+            for (let x = -5; x <= 5; x++) {
+              const c = new X.cube();
+              c.lengthX = SIZE;
+              c.lengthY = SIZE;
+              c.lengthZ = SIZE;
+
+              c.transform.translateX((SIZE + GAP) * x);
+              c.transform.translateY((SIZE + GAP) * y);
+              c.transform.translateZ((SIZE + GAP) * z);
+
+              r.add(c);
+            }
+          }
+        }
+
+        console.log('Total cubes:', Math.pow(11, 3)); // 1331
         r.render();
       };
     </script>
   </body>
 </html>
-
-
