--- a/02/index.html
+++ b/02/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>CS460 — Assignment 2 (Part 2)</title>
+    <title>CS460 — Assignment 2 (Part 3)</title>
     <style>
       html, body, #r { margin: 0; width: 100%; height: 100%; background: #000; }
     </style>
@@ -13,7 +13,7 @@
     <!-- XTK library -->
     <script src="https://get.goxtk.com/xtk.js"></script>
 
-    <!-- loader.js for save/load (used later) -->
+    <!-- loader.js (used later for save/load) -->
     <script src="loader.js"></script>
 
     <script>
@@ -25,7 +25,10 @@
         r.container = 'r';
         r.init();
 
-        // 11 × 11 × 11 grid = 1331 cubes
+        // pull camera back so the grid is visible
+        r.camera.position = [0, 0, 300];
+
+        // 11 × 11 × 11 = 1331 cubes
         const SIZE = 6;
         const GAP  = 2;
 
@@ -46,7 +49,6 @@
           }
         }
 
-        console.log('Total cubes:', Math.pow(11, 3)); // 1331
         r.render();
       };
     </script>
