--- a/02/index.html
+++ b/02/index.html
@@ -1,2 +1,70 @@
-Ready for assignment 2.
+<html>
+    <head>
+        <title>CS460.org Assignment 2</title>
+        <style>
+        body {
+            background-color: black;
+        }
+        </style>
+        <script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
+        <script src="loader.js"></script>
+        <script>
+            window.onload = function() {
+                var SIZE = 20;
+                var GAP = 2;
+                var SELECTED_CUBE;
+                var camera_rotate = false;
+                
+                r = new X.renderer3D();
+                r.init();
 
+                for (var z=-5; z < 6; z++) {
+                    for (var y=-5; y < 6; y++) {
+                        for (var x=-5; x < 6; x++) {
+                            new_cube = new X.cube();
+                            new_cube.transform.translateX((SIZE + GAP) * x);
+                            new_cube.transform.translateY((SIZE + GAP) * y);
+                            new_cube.transform.translateZ((SIZE + GAP) * z);
+
+                            r.add(new_cube);
+                        }
+                    }
+                }
+
+                r.camera.position = [0, 0, 300];
+
+                r.interactor.onMouseMove = function(event) {
+                    cubeid = r.pick(event.offsetX, event.offsetY);
+                    if (cubeid != 0) {
+                        SELECTED_CUBE = r.get(cubeid);
+                    }
+                }
+
+                window.onkeypress = function(e) {
+                    if (e.key == 'q') {
+                        SELECTED_CUBE.visible = false;
+                    } else if (e.key == 'w') {
+                        SELECTED_CUBE.color = [Math.random(), Math.random(), Math.random()];
+                    } else if (e.key == 'e') {
+                        SELECTED_CUBE.transform.rotateX(10);
+                    } else if (e.key == 'b') {
+                        camera_rotate = !camera_rotate;
+                        r.onRender = function() {
+                            // spin the camera in X direction by 1 degree
+                            if (camera_rotate) {
+                                r.camera.rotate([1, 0]);
+                            }
+                        }
+                    } else if (e.key == 'o') {
+                        download();
+                    } else if (e.key == 'l') {
+                        upload('scene.json');
+                    }
+                }
+                r.render();
+            }
+        </script>
+    </head>
+    <body>
+    </body>
+</html>
