--- a/02/index.html
+++ b/02/index.html
@@ -36,7 +36,7 @@
 
             window.onload = function() {
                 // Creates the renderer
-                const r = new X.renderer3D();
+                window.r = new X.renderer3D();
                 r.container = 'scene';
                 r.init();
                 
