--- a/02/index.html
+++ b/02/index.html
@@ -1,2 +1,77 @@
-Ready for assignment 2.
+<html>
+  <head>
 
+      <style>
+        body {
+            background-color: black;
+        }
+      </style>
+
+      <script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
+      <script type="text/javascript" src="loader.js"></script>
+
+      <script>
+      	var SELECTED_CUBE;
+      	var ROTATE_CUBE = 0;
+
+
+          window.onload = function() {
+          	var SIZE = 12;
+          	var GAP = 10;
+          	r = new X.renderer3D();
+          	r.init();
+
+              for (var z= -5; z < 6; z++){
+              	for (var y = -5; y < 6; y++) {
+              		for (var x = -5; x < 6; x++){
+              			new_cube = new X.cube;
+              			new_cube.transform.translateX((SIZE + GAP) * x);
+              			new_cube.transform.translateY((SIZE + GAP) * y);
+              			new_cube.transform.translateZ((SIZE + GAP) * z);
+
+              			r.add(new_cube);
+              			
+              		}
+              	}
+              }
+              r.camera.position = [0,0,300];
+              r.render();
+
+              r.interactor.onMouseMove = function(event) {
+              	var cubeid = r.pick(event.offsetX, event.offsetY);
+              	if (cubeid != 0)
+              		SELECTED_CUBE = r.get(cubeid);
+              }
+
+             window.onkeypress = function(e) {
+              	if (e.key == 'q') {
+              	SELECTED_CUBE.visible = false;
+             	} else if (e.key == 'w') {
+              	SELECTED_CUBE.color = [Math.random(), Math.random(), Math.random()];
+             	} else if (e.key == 'e') {
+              	SELECTED_CUBE.transform.rotateX(10);
+             	} else if (e.key == 'b') {
+             		if (ROTATE_CUBE == 0){
+             			ROTATE_CUBE = 1;
+             		} else ROTATE_CUBE = 0;
+             	} else if (e.key == 'o') {
+             		download();
+             	} else if (e.key == 'l'){
+             		upload("scene.json");
+             	}
+         	 }
+         	 	r.onRender = function() {
+         	 		if (ROTATE_CUBE == 1){
+					// spin the camera in X direction by 1 degree
+					r.camera.rotate([1, 0]);
+				} 
+         	 }
+          }
+
+
+      </script>
+
+  </head>
+  <body>
+  </body>
+</html>
