--- a/02/index.html
+++ b/02/index.html
@@ -34,11 +34,10 @@
         // Global variable for storing the selected cube. null when no cube selected
         let SELECTED_CUBE = null;
 
-        // Each loop will run 11 times, creating 11^3 or 1,331 cubes.
+        // The inner most loop will run a total of 11^3 times, creating 11^3 or 1,331 cubes.
         for (let z = -5; z < 6; z++) {
           for (let y = -5; y < 6; y++) {
             for (let x = -5; x < 6; x++) {
-              // Create new cube.
               let new_cube = new X.cube();
 
               // Modified the for loop so SIZE actually determines the size of the cube.
@@ -56,21 +55,18 @@
           }
         }
 
-        // Set the initial camera position.
+        // Move the camera so all cubes are in view by default.
         r.camera.position = [0, 0, 300];
 
-        // Render the scene.
-        r.render();
-
         /*
-           Code for handling getting the current cube the mouse is hovering over and spinning camera.
+           onRender handles getting the current cube the mouse is hovering over and spinning camera.
            I chose to use onRender instead of onMouseMove so that way when the user hides a cube, 
            they don't need to move the mouse again to select the next one. 
            I read through the XTK API to find the mousePosition variable which works outside of onMouseMove.
            Then I used the onRender callback in order to trigger the code on every frame.
         */
         r.onRender = () => {
-          // Gets current mouse position
+          // Gets current mouse position as an array of 2 items: [x, y].
           let mousePosition = r.interactor.mousePosition;
 
           // Use pick to find the ID of the cube.
@@ -89,42 +85,30 @@
 
         // Handles all keypress operations.
         window.onkeypress = (e) => {
-          // Hides cube on q press
           if (e.key == "q" && SELECTED_CUBE) {
-            SELECTED_CUBE.visible = false;
-          }
-
-          // Randomizes color on w press.
-          if (e.key == "w" && SELECTED_CUBE) {
-            SELECTED_CUBE.color = [Math.random(), Math.random(), Math.random()];
-          }
-
-          // Rotate the cube on the x axis 10 degrees on e press.
-          if (e.key == "e" && SELECTED_CUBE) {
-            SELECTED_CUBE.transform.rotateX(10);
-          }
-
-          // Toggle the rotation of the camera on b key press.
-          if (e.key == "b") {
-            rotateCamera = !rotateCamera;
-          }
-
-          // Download the current scene on o key press.
-          if (e.key == "o") {
-            download(r);
-          }
-
-          // Upload the current scene on l key press.
-          if (e.key == "l") {
-            upload(r, "scene.json");
+            SELECTED_CUBE.visible = false;   // Hides cube on q press
+          } else if (e.key == "w" && SELECTED_CUBE) {
+            SELECTED_CUBE.color = [Math.random(), Math.random(), Math.random()];  // Randomizes color on w press.
+          } else if (e.key == "e" && SELECTED_CUBE) {
+            SELECTED_CUBE.transform.rotateX(10);  // Rotate the cube on the x axis 10 degrees on e press.
+          } else if (e.key == "b") {
+            rotateCamera = !rotateCamera; // Toggle the rotation of the camera on b key press.
+          } else if (e.key == "o") {
+            download(r);  // Download the current scene on o key press.
+          } else if (e.key == "l") {
+            upload(r, "scene.json");  // Upload the current scene on l key press.
           }
         };
+
+        // Render the scene.
+        r.render();
       };
 
       // Below is my modified code of the above triple nested for-loops to create the gradient and rotation effect for my solution to Part 8 of the assignment.
       // It involved creating a gradient, determining what part of the gradient should be selected based on the x, y, and z variables, and rotating the cubes randomly.
 
       /*
+      ----------------------------PART 8 SOLUTION CREATION------------------------------
       // Gradient chosen for my submission to part 8
         const GRADIENT = [
             [50, 0, 255],   // More blue
@@ -156,7 +140,7 @@
               // This works by adding 5 to x, y, z brings the range of these variables from [-5, 5] to [0, 10].
               // Then each variable is divided by 3, which essentially adds a "weight" to each axis to determine how far along the gradient it is.
               // A Math.min is taken to prevent the sum of these variables from going past the array of the gradient.
-              // Lastly, the number is rounded so it can map an index to an array.
+              // Lastly, the number is rounded so it can map the selected index to the array.
               let i = Math.round(Math.min(GRADIENT.length, ((y+5)/3) + ((x+5)/3) + ((z+5)/3)))
             
               // The colors above are stored in RGB [0,255], so each value is divided by 255 to bring it between [0, 1]
