--- a/02/index.html
+++ b/02/index.html
@@ -1,2 +1,108 @@
-Ready for assignment 2.
+<html>
+    <head>
+        <style>
+            body {
+                background-color: black;
+            }
+        </style>
 
+        <script src="loader.js"></script>
+        <script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
+
+        <script>
+            var r;
+            var SIZE = 1;
+            var GAP = 0.5;
+            var SELECTED_CUBE = 0;
+            var SPIN_CAMERA = false;
+            var CAMERAS = [];
+
+            window.onload = function(){
+                
+
+                r = new X.renderer3D();
+                r.init();
+
+                // Original part 1 code
+                // c = new X.cube();
+                // r.add(c);
+
+                // Part 2 code (I also had to declare the sizes of each side of the cube)
+                for (var z = -5; z < 6; z++){
+                    for (var y = -5; y < 6; y++){
+                        for (var x = -5; x < 6; x++){
+
+                            var new_cube = new X.cube();
+                            
+                            new_cube.lengthX = SIZE;
+                            new_cube.lengthY = SIZE;
+                            new_cube.lengthZ = SIZE;
+
+                            new_cube.transform.translateX((SIZE + GAP) * x);
+                            new_cube.transform.translateY((SIZE + GAP) * y);
+                            new_cube.transform.translateZ((SIZE + GAP) * z);
+
+                            r.add(new_cube);
+                        }
+                    }
+                }
+
+                // Part 3 code
+                r.camera.position = [0, 0, 300];
+
+                // Part 4 code
+                r.interactor.onMouseMove = function(event) {
+                    var cubeid = r.pick(event.offsetX, event.offsetY);
+
+                    if (cubeid != 0){
+                        SELECTED_CUBE = r.get(cubeid);
+                        // simply for feedback to ensure we have correctly selected a cube
+                        // SELECTED_CUBE.color = [1, 0, 0];
+                    }
+                };
+
+                // Part 5 code
+                window.onkeypress = function(e){
+                    if (!SELECTED_CUBE) return;
+
+                    switch(e.key.toLowerCase()){
+                        case 'q':
+                            SELECTED_CUBE.visible = false;
+                            break;
+                        case 'w':
+                            SELECTED_CUBE.color = [Math.random(), Math.random(), Math.random()];
+                            break;
+                        case 'e':
+                            SELECTED_CUBE.transform.rotateX(10);
+                            break;
+                        // addition for part 6
+                        case 'b':
+                            SPIN_CAMERA = !SPIN_CAMERA;
+                            break;
+                        // 'o' and 'l' additions for part 7
+                        case 'o':
+                            download();
+                            break;
+                        case 'l':
+                            upload('scene.json');
+                            break;
+                        default:
+                            break;
+                    }
+                }
+
+                // Part 6 code
+                r.onRender = function(){
+                    if (SPIN_CAMERA){
+                        r.camera.rotate([1, 0]);
+                    }
+                };
+
+                r.render();
+            }
+
+        </script>
+    </head>
+    <body>
+    </body>
+</html>
