Update with correct keys

--- a/hw2.html
+++ b/hw2.html
@@ -60,6 +60,14 @@
                     activeRo = !activeRo;
                   }
 
+                   if (e.key === 'o'){
+                    download();
+                  }
+
+                  if (e.key === 'l'){
+                    upload("scene.json");
+                  }
+
                 }
 
                     r.onRender = function(){
