--- a/hw2.html
+++ b/hw2.html
@@ -18,7 +18,7 @@
 
           window.onload = function() {
                   
-              const r = new X.renderer3D();
+               r = new X.renderer3D();
               r.init();
 
               for (var z = -5; z < 6; z++) {
