--- a/hw2.html
+++ b/hw2.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <script src="https://raw.githubusercontent.com/ivandoliveira0/cs460student/main/02/loader.js"></script>
+      <script src="https://ivandoliveira0.github.io/cs460student/02/loader.js"></script>
       <style>
         body {
             background-color: black;
