Added cube dissapear by 'q' code

--- a/02/index.html
+++ b/02/index.html
@@ -47,8 +47,13 @@
                         return;
                     }
                     SELECTED_CUBE = r.get(cubeid);
-                    console.log(SELECTED_CUBE);
-            }
+                    // console.log(SELECTED_CUBE);
+                }
+                window.onkeypress = function(e){
+                    if (e.key == 'q'){
+                        SELECTED_CUBE.visible = false;
+                    }
+                }
 
 
 
