--- a/02/index.html
+++ b/02/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"> 
     <title>Assignment 2 (Cs 460 with Daniel)</title>
     <script type="text/javascript" src="http://get.goxtk.com/xtk_edge.js"></script>
+    <script src="loader.js"></script>
 </head>
 <style>
     body{
@@ -67,6 +68,13 @@
                         }
                         else if (B_ROTATE == true){
                             B_ROTATE = false};
+                    }
+                    if (e.key == 'o'){
+                        download();
+                    }
+                    if (e.key == 'l'){
+                        upload("scene.json");
+                        console.log("It works!!");
                     }
                 }
                 r.onRender = function(){
