Added https tag instead of http

--- a/02/index.html
+++ b/02/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"> 
     <title>Assignment 2 (Cs 460 with Daniel)</title>
-    <script type="text/javascript" src="http://get.goxtk.com/xtk_edge.js"></script>
+    <script type="text/javascript" src="https://get.goxtk.com/xtk_edge.js"></script>
     <script src="loader.js"></script>
 </head>
 <style>
