--- a/02/index.html
+++ b/02/index.html
@@ -2,30 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>CS461 – A2 Part 1 (Hello Cube)</title>
-  <style>html,body{margin:0;height:100%;background:#000}</style>
-  <!-- Load XTK from CDN (no xtk.js file needed) -->
+  <title>CS461 – A2 Hello Cube</title>
+  <style>html,body{margin:0;height:100%;background:#000;color:#ddd}</style>
+  <!-- XTK from CDN -->
   <script src="https://get.goXTK.com/xtk_edge.js"></script>
 </head>
 <body>
+  <div id="ok" style="position:fixed;left:10px;top:10px">loaded…</div>
 <script>
   window.onload = function () {
     var r = new X.renderer3D();
     r.init();
 
-    // Make one cube
     var c = new X.cube();
     c.lengthX = c.lengthY = c.lengthZ = 20;
 
-    // Move camera back so we can see it
     r.camera.position = [0, 0, 150];
-
     r.add(c);
     r.render();
   };
 </script>
-
-<!-- Your professor's save/load helper -->
+<!-- Keep this if you already added it -->
 <script src="loader.js"></script>
 </body>
 </html>
