--- a/02/index.html
+++ b/02/index.html
@@ -1,2 +1,130 @@
-Ready for assignment 2.
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>CS460 – A2 Cube Art</title>
 
+    <!-- XTK (edge build for modern browsers) -->
+    <script src="https://get.goXTK.com/xtk_edge.js"></script>
+    <!-- Scene save/load helpers provided in 02/ -->
+    <script src="./loader.js"></script>
+
+    <style>
+      /* Black background like the reference */
+      html,
+      body {
+        margin: 0;
+        height: 100%;
+        overflow: hidden;
+        background: #000;
+      }
+      #r {
+        width: 100%;
+        height: 100%;
+        background: #000;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="r"></div>
+
+    <script>
+      window.onload = function () {
+        // ===== Part 1: renderer =====
+        var r = new X.renderer3D();
+        r.container = "r";
+        r.init();
+        window.r = r;
+
+        // Clear color to black
+        r.bgColor = [0, 0, 0];
+        r.backgroundColor = [0, 0, 0];
+
+        // ===== Part 2: many cubes (11 x 11 x 11 = 1331, no overlap) =====
+        const CUBE = 8; // edge length of each cube
+        const GAP = 2; // space between cubes
+        const STEP = CUBE + GAP;
+
+        for (let iz = -5; iz < 6; iz++) {
+          for (let iy = -5; iy < 6; iy++) {
+            for (let ix = -5; ix < 6; ix++) {
+              const c = new X.cube();
+
+              // Explicit cube size (default is ~20)
+              c.lengthX = CUBE;
+              c.lengthY = CUBE;
+              c.lengthZ = CUBE;
+
+              // Default color white
+              c.color = [1, 1, 1];
+              c.opacity = 1;
+
+              // Place cubes evenly spaced
+              c.transform.translateX(STEP * ix);
+              c.transform.translateY(STEP * iy);
+              c.transform.translateZ(STEP * iz);
+
+              r.add(c);
+            }
+          }
+        }
+
+        // ===== Part 3: move camera back =====
+        r.camera.position = [0, 0, 500];
+
+        // ===== Part 4: mouse hover picking =====
+        let SELECTED_CUBE = null;
+        r.interactor.onMouseMove = function (event) {
+          const cubeid = r.pick(event.offsetX, event.offsetY);
+          if (cubeid != 0) SELECTED_CUBE = r.get(cubeid);
+        };
+
+        // ===== Part 6: camera spin toggle =====
+        let spinning = false;
+
+        // ===== Parts 5,6,7: keyboard =====
+        window.addEventListener("keypress", function (e) {
+          const k = e.key.toLowerCase();
+
+          // Q: hide selected cube
+          if (k === "q" && SELECTED_CUBE) {
+            SELECTED_CUBE.visible = false;
+          }
+
+          // W: random color for selected cube
+          if (k === "w" && SELECTED_CUBE) {
+            SELECTED_CUBE.color = [Math.random(), Math.random(), Math.random()];
+          }
+
+          // E: rotate +10° around X
+          if (k === "e" && SELECTED_CUBE) {
+            SELECTED_CUBE.transform.rotateX(10);
+          }
+
+          // B: toggle camera spinning
+          if (k === "b") {
+            spinning = !spinning;
+          }
+
+          // O: download scene.json (requires http/https, not file://)
+          if (k === "o" && typeof download === "function") {
+            download();
+          }
+
+          // L: load scene.json from this folder
+          if (k === "l" && typeof upload === "function") {
+            upload("scene.json");
+          }
+        });
+
+        // spin the camera when enabled
+        r.onRender = function () {
+          if (spinning) r.camera.rotate([1, 0]); // 1° around X each frame
+        };
+
+        // go!
+        r.render();
+      };
+    </script>
+  </body>
+</html>
