--- a/02/index.html
+++ b/02/index.html
@@ -19,7 +19,7 @@
 
         <!-- Gets the XTK library -->
         <script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
-        <script type="text/javascript" src="./loader.js"></script>
+        <script type='text/javascript' src="loader.js"></script>
 
     </head>
 
@@ -63,18 +63,19 @@
                         for (let k = 0; k <= 1; k += gradientIncrement) {
 
                             // Creates the current cube
-                            let c = new X.cube()
+                            let new_cube = new X.cube()
 
                             // Edits possition, size, color, and opacity
-                            c.center = [xPos, yPos, zPos];
-                            c.lengthX = size;
-                            c.lengthY = size;
-                            c.lengthZ = size;
-                            c.color = [k, j, i];
-                            c.opacity = varOpacity / 100;
+                            new_cube.transform.translateX(xPos);
+                            new_cube.transform.translateY(yPos);
+                            new_cube.transform.translateZ(zPos);
+                            new_cube.lengthY = size;
+                            new_cube.lengthZ = size;
+                            new_cube.color = [k, j, i];
+                            new_cube.opacity = varOpacity / 100;
 
                             // Adds the current cube to the renderer
-                            r.add(c);
+                            r.add(new_cube);
                             
                             zPos += spacing;
                         }
@@ -103,14 +104,16 @@
                 };
 
                 window.onkeypress = function(e) {
-                    if (e.key == 'q') {
-                        SELECTED_CUBE.visible = false;
-                    };
-                    if (e.key == 'w') {
-                        SELECTED_CUBE.color = [Math.random(), Math.random(), Math.random()];
-                    };
-                    if (e.key == 'e') {
-                        SELECTED_CUBE.transform.rotateX(10);
+                    if (SELECTED_CUBE) {
+                        if (e.key == 'q') {
+                            SELECTED_CUBE.visible = false;
+                        };
+                        if (e.key == 'w') {
+                            SELECTED_CUBE.color = [Math.random(), Math.random(), Math.random()];
+                        };
+                        if (e.key == 'e') {
+                            SELECTED_CUBE.transform.rotateX(10);
+                        };
                     };
                     if (e.key == 'b') {
                         ROTATING_TIME = !ROTATING_TIME;
@@ -119,6 +122,7 @@
                         download();
                     };
                     if (e.key == 'l') {
+                        r.resetViewAndRender();
                         upload("scene.json");
                     };
                 };
