--- a/02/index.html
+++ b/02/index.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <title>CS461 – A2 3D ART</title>
+
+  <!-- Google Font: Baloo 2 -->
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&display=swap" rel="stylesheet">
+
+  <script src="https://get.goXTK.com/xtk_edge.js"></script>
+
   <style>
-    html,body{margin:0;height:100%;background:#000;color:#ddd}
+    html,body{margin:0;height:100%;background:#000;color:#fff; font:16px "Baloo 2", system-ui, -apple-system, "Segoe UI", Arial, sans-serif; }
     #hud{
       position:fixed; left:50%; top:12px; transform:translateX(-50%);
       background:rgba(0,0,0,.5); padding:8px 12px; border-radius:10px;
@@ -61,5 +67,3 @@
 <script src="loader.js"></script>
 </body>
 </html>
-
-
