--- a/02/index.html
+++ b/02/index.html
@@ -1,2 +1,97 @@
-Ready for assignment 2.
+<html>
+  <head>
+    <style>
+      body {
+        background-color: black;
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
+
+    <script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
+    <script type="text/javascript" src="loader.js"></script>
+
+    <script>
+      var SELECTED_CUBE = null;
+      var SPINNING = false;
+      var r; 
+
+      window.onload = function() {
+        // setup renderer
+        r = new X.renderer3D(); 
+        r.init();
+
+        var SIZE = 3;
+        var GAP = 1;
+
+
+        for (var z = -5; z < 6; z++) {
+          for (var y = -5; y < 6; y++) {
+            for (var x = -5; x < 6; x++) {
+              var new_cube = new X.cube();
+              new_cube.lengthX = SIZE;
+              new_cube.lengthY = SIZE;
+              new_cube.lengthZ = SIZE;
+
+              new_cube.transform.translateX((SIZE + GAP) * x);
+              new_cube.transform.translateY((SIZE + GAP) * y);
+              new_cube.transform.translateZ((SIZE + GAP) * z);
+
+              r.add(new_cube);
+            }
+          }
+        }
+
+        r.camera.position = [0, 0, 300];
+
+
+        r.interactor.onMouseMove = function(event) {
+          var cubeid = r.pick(event.offsetX, event.offsetY);
+
+          if (cubeid != 0) {
+            SELECTED_CUBE = r.get(cubeid);
+          } else {
+            SELECTED_CUBE = null;
+          }
+        };
+
+        window.onkeypress = function(e) {
+
+          if (!SELECTED_CUBE && e.key !== 'b' && e.key !== 'o' && e.key !== 'l') return;
+
+          if (e.key == 'q') {
+            SELECTED_CUBE.visible = false;
+          } else if (e.key == 'w') {
+            SELECTED_CUBE.color = [
+              Math.random(),
+              Math.random(),
+              Math.random()
+            ];
+          } else if (e.key == 'e') {
+            SELECTED_CUBE.transform.rotateX(10);
+          } else if (e.key == 'b') {
+            SPINNING = !SPINNING;
+          } else if (e.key == 'o') {
+            download();  
+          } else if (e.key == 'l') {
+            upload("scene.json"); 
+          }
+        };
+
+
+        r.onRender = function() {
+          if (SPINNING) {
+            r.camera.rotate([1, 0]);
+          }
+        };
+
+        r.render();
+      };
+    </script>
+  </head>
+  <body>
+  </body>
+</html>
+
+
 
