--- a/02/index.html
+++ b/02/index.html
@@ -1,23 +1,28 @@
-<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>CS461 – A2 3D ART</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Google Font: Baloo 2 -->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&display=swap" rel="stylesheet">
 
+  <!-- XTK from CDN -->
   <script src="https://get.goXTK.com/xtk_edge.js"></script>
 
   <style>
-    html,body{margin:0;height:100%;background:#000;color:#fff; font:16px "Baloo 2", system-ui, -apple-system, "Segoe UI", Arial, sans-serif; }
+    html,body{
+      margin:0;height:100%;
+      background:#000;color:#fff;
+      font:16px "Baloo 2", system-ui, -apple-system, "Segoe UI", Arial, sans-serif;
+    }
     #hud{
-      position:fixed; left:50%; top:12px; transform:translateX(-50%);
-      background:rgba(0,0,0,.5); padding:8px 12px; border-radius:10px;
-      font-family:system-ui, sans-serif; font-weight:600; letter-spacing:.5px;
+      position:fixed;left:50%;top:12px;transform:translateX(-50%);
+      background:rgba(0,0,0,.5);padding:8px 12px;border-radius:10px;
+      font-family:"Baloo 2", system-ui, -apple-system, "Segoe UI", Arial, sans-serif;
+      font-weight:600;letter-spacing:.5px;
     }
   </style>
-  <script src="https://get.goXTK.com/xtk_edge.js"></script>
 </head>
 <body>
   <div id="hud">CS461 – A2 3D ART</div>
@@ -27,7 +32,7 @@
   r.init();
   r.camera.position = [0, 0, 300];
 
-  const SIZE=6, GAP=2; function pos(n){ return (SIZE+GAP)*n; }
+  const SIZE=6, GAP=2; const pos=n=>(SIZE+GAP)*n;
   for (let z=-5; z<=5; z++){
     for (let y=-5; y<=5; y++){
       for (let x=-5; x<=5; x++){
@@ -42,12 +47,14 @@
     }
   }
 
+  // Picking (hover)
   var SELECTED = null;
   r.interactor.onMouseMove = function(e){
     const id = r.pick(e.offsetX, e.offsetY);
     SELECTED = (id && id !== 0) ? r.get(id) : null;
   };
 
+  // Keys
   let SPIN=false;
   window.onkeypress = function(ev){
     const k = ev.key.toLowerCase();
